change streams with .collect(Collectors.toList()) to just .toList()